Archive2/de/a6267e2152ba80/output
main.cpp:8:18: error: 'copy' marked 'override' but does not override any member functions
    virtual void copy(B& b) override {}
                 ^
main.cpp:8:18: warning: 'B::copy' hides overloaded virtual function [-Woverloaded-virtual]
main.cpp:3:18: note: hidden overloaded virtual function 'A::copy' declared here: type mismatch at 1st parameter ('A &' vs 'B &')
    virtual void copy(A& a) {}
                 ^
main.cpp:14:6: error: expected ';' after expression
    b b2;
     ^
     ;
main.cpp:14:7: error: use of undeclared identifier 'b2'
    b b2;
      ^
main.cpp:15:12: error: use of undeclared identifier 'b2'
    b.copy(b2);
           ^
main.cpp:14:5: warning: expression result unused [-Wunused-value]
    b b2;
    ^
2 warnings and 4 errors generated.
